<resources>
    <string name="app_name">Fortune</string>

    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="go_back">Go back</string>
    <string name="cuenta">Cuenta</string>
    <string name="solicitudes_de_bizum">Solicitudes de bizum</string>
    <string name="open_item">Open item</string>
    <string name="solicitar_dinero_a_un_movil">Solicitar dinero a un movil</string>
    <string name="solicitar_dinero">Solicitar dinero</string>
    <string name="in_bizum">In bizum</string>
    <string name="open_item_2">Open item</string>
    <string name="envio_de_dinero_a_un_movil">Envio de dinero a un movil</string>
    <string name="enviar_dinero">Enviar dinero</string>
    <string name="out_bizum">Out bizum</string>
    <string name="mas_opciones">Mas opciones</string>
    <string name="bizums_recientes">Bizums recientes</string>
    <string name="go_back_2">Go back</string>
    <string name="bizum">Bizum</string>
    <string name="go_back_3">Go back</string>
    <string name="solicitud_de_bizum">Solicitud de bizum</string>
    <string name="solicitud">Solicitud</string>
    <string name="aceptar">Aceptar</string>
    <string name="rechazar">Rechazar</string>
    <string name="go_back_4">Go back</string>
    <string name="balance">Balance</string>
    <string name="simular_pago">Simular pago</string>
    <string name="consultar_pin">Consultar PIN</string>
    <string name="cargar_tarjeta">Cargar tarjeta</string>
    <string name="bloquear_tarjeta">Bloquear tarjeta</string>
    <string name="ver_cvv">Ver cvv</string>
    <string name="movimientos">Movimientos</string>
    <string name="cambiar_firma_electronica">Cambiar firma electronica</string>
    <string name="modifica_tu_firma_electronica">Modifica tu firma electronica</string>
    <string name="guion">-</string>
    <string name="cambiar">Cambiar</string>
    <string name="go_back_5">Go back</string>
    <string name="cambiar_contrase_a">Cambiar contraseña</string>
    <string name="contrase_a">Contraseña</string>
    <string name="repite_la_contrase_a">Repite la contraseña</string>
    <string name="cambiar_2">Cambiar</string>
    <string name="configuraci_n">Configuración</string>
    <string name="datos_personales">Datos personales</string>
    <string name="nombre">Nombre</string>
    <string name="direcci_n">Dirección</string>
    <string name="nif">NIF</string>
    <string name="email">Email</string>
    <string name="telefono">Telefono</string>
    <string name="guardar">Guardar</string>
    <string name="contacto_reciente">Contacto reciente</string>
    <string name="pfpfastcontact">PfpFastContact</string>
    <string name="acceso_rapido">Acceso rapido</string>
    <string name="hola_nos_alegra_verte_de_nuevo">¡Hola! Nos alegra verte de nuevo</string>
    <string name="dni_nie">DNI/NIE</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="a_n_no_tienes_cuenta">¿Aún no tienes cuenta?</string>
    <string name="registrate">Registrate</string>
    <string name="logo_con_slogan">Logo con slogan</string>
    <string name="sign_up">Sign up</string>
    <string name="total_balance">Total Balance</string>
    <string name="balance_info">Balance info</string>
    <string name="a_adir_dinero">Añadir dinero</string>
    <string name="a_adir">Añadir €</string>
    <string name="hacer_bizum">Hacer bizum</string>
    <string name="config">Config</string>
    <string name="seguridad">Seguridad</string>
    <string name="my_cards">My Cards</string>
    <string name="recent">Recent</string>
    <string name="firma_electronica">Firma electronica</string>
    <string name="crea_tu_primera_firma">Crea tu primera firma</string>
    <string name="hola_reg_strate_para_comenzar">¡Hola! Regístrate para comenzar.</string>
    <string name="confirm_password">Confirm password</string>
    <string name="ya_tienes_una_cuenta">¿Ya tienes una cuenta?</string>
    <string name="inicia_sesi_n">Inicia sesión</string>
    <string name="eur">EUR</string>
    <string name="_0_00">0,00</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="remove">Remove</string>
    <string name="_0">0</string>
    <string name="_comma">,</string>
    <string name="transferencia_local">Transferencia local</string>
    <string name="transferir_dinero">Transferir dinero</string>
    <string name="eliga_una_tarjeta_para_realizar_la_transferencia">Eliga una tarjeta para realizar la transferencia</string>
    <string name="enviar">Enviar</string>
    <string name="completa_tu_perfil_para_empezar">Completa tu perfil para empezar.</string>
    <string name="telf">Telf</string>
    <string name="confirmar">Confirmar</string>
    <string name="master_card_logo">Master card logo</string>
    <string name="cantidad">Cantidad</string>
    <string name="login_error">Login Error</string>
    <string name="las_credenciales_introducidas_son_incorrectas">Las credenciales introducidas son incorrectas.</string>
    <string name="ok">OK</string>
    <string name="firma_digital">FIRMA DIGITAL</string>
    <string name="entidad_receptora">Entidad receptora</string>
    <string name="_0_00_e">0,00 €</string>
    <string name="pagar">Pagar</string>
    <string name="accepted">Accepted</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="app_config">App Config</string>
    <string name="perfil">Perfil</string>
    <string name="home">Home</string>
</resources>