<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.app.FastContactOperate"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:id="@+id/go_back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/go_back_arrow"
            android:contentDescription="@string/go_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/disabled0"
            android:text="@string/contacto_reciente"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_gravity="center">
        <ImageView
            android:id="@+id/fast_contact_pfp"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_gravity="center"
            android:background="@drawable/img_rounded"
            android:clipToOutline="true"
            android:contentDescription="@string/pfpfastcontact"/>

        <TextView
            android:id="@+id/fast_contact_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/acceso_rapido"
            android:textSize="22dp"/>

        <LinearLayout
            android:id="@+id/send_bizum"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:clickable="true"
            android:background="@drawable/bizum_buttons_animation"
            android:elevation="50dp"
            android:layout_marginBottom="10dp">
            <ImageView
                android:clickable="false"
                android:focusable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/out_bizum"
                android:padding="18dp"
                android:contentDescription="@string/out_bizum"/>

            <LinearLayout
                android:clickable="false"
                android:focusable="false"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enviar_dinero"
                    android:textColor="@color/white"
                    android:textSize="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/envio_de_dinero_a_un_movil"
                    android:textColor="@color/disabled1"
                    android:textSize="15dp"/>
            </LinearLayout>

            <ImageView
                android:clickable="false"
                android:focusable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/open_item_arrow_right"
                android:contentDescription="@string/open_item"
                android:scaleType="fitCenter"
                android:padding="25dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ask_bizum"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:clickable="true"
            android:background="@drawable/bizum_buttons_animation"
            android:elevation="50dp"
            android:layout_marginBottom="10dp">
            <ImageView
                android:clickable="false"
                android:focusable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/in_bizum"
                android:padding="18dp"
                android:contentDescription="@string/in_bizum"/>

            <LinearLayout
                android:clickable="false"
                android:focusable="false"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/solicitar_dinero"
                    android:textColor="@color/white"
                    android:textSize="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/solicitar_dinero_a_un_movil"
                    android:textColor="@color/disabled1"
                    android:textSize="15dp"/>
            </LinearLayout>

            <ImageView
                android:clickable="false"
                android:focusable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/open_item_arrow_right"
                android:contentDescription="@string/open_item"
                android:scaleType="fitCenter"
                android:padding="25dp"/>
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/request_bizum_rview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:nestedScrollingEnabled="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
    </LinearLayout>
</LinearLayout>