<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/ac_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical"
        android:background="@drawable/bg">

    <ImageView
            android:layout_weight="8"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:src="@drawable/logo_slogan"
            android:contentDescription="@string/logo_con_slogan"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical"
            android:layout_marginBottom="30dp">

        <Button
                android:id="@+id/btn_login"
                android:layout_weight="1"
                android:layout_width="320dp"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:text="@string/log_in"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold"
                android:backgroundTint="@color/white"/>

        <Button
                android:layout_weight="1"
                android:id="@+id/btn_sing_up"
                android:layout_width="320dp"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold"
                android:backgroundTint="@color/app"
                android:theme="@style/Widget.Material3.Button.OutlinedButton"/>

    </LinearLayout>

</LinearLayout>