<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.app.ChangePasswordActivity"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:id="@+id/go_back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/go_back_arrow"
            android:contentDescription="@string/go_back_5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/disabled0"
            android:text="@string/cambiar_contrase_a"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="100dp"
        android:gravity="center_horizontal"
        android:layout_marginEnd="10dp"
        android:orientation="vertical">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cambiar_contrase_a"
            android:layout_marginTop="20dp"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordField1Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/contrase_a">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordField1Field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/disabled2"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordField2Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/repite_la_contrase_a">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordField2Field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/disabled2"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/change_pass_btn"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/button_disabled"
            android:text="@st
            ring/cambiar_2"
            android:enabled="false"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="12dp"
            app:backgroundTint="@null"
            app:iconGravity="textStart" />
    </LinearLayout>

</LinearLayout>