<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/ac_pin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.view.user.PinActivity">

    <LinearLayout
            android:layout_weight="4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:gravity="center|bottom"
            android:layout_marginBottom="30dp">
        <TextView
                android:layout_weight="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/firma_electronica"
                android:textColor="@color/white"
                android:textSize="30dp"
                android:textStyle="bold"/>
        <TextView
                android:layout_weight="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/crea_tu_primera_firma"
                android:textColor="@color/disabled2"
                android:textSize="20dp"
                android:textStyle="italic"/>
    </LinearLayout>

    <LinearLayout
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center|top">
        <EditText
                android:id="@+id/firma_box_1"
                android:layout_width="70dp"
                android:layout_height="100dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:inputType="number"
                android:hint="@string/guion"
                android:textColorHint="@color/disabled2"
                android:textSize="50dp"
                android:maxLength="1"
                android:textAlignment="center"/>
        <EditText
                android:id="@+id/firma_box_2"
                android:layout_width="70dp"
                android:layout_height="100dp"
                android:inputType="number"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/guion"
                android:textColorHint="@color/disabled2"
                android:textSize="50dp"
                android:maxLength="1"
                android:textAlignment="center"/>
        <EditText
                android:id="@+id/firma_box_3"
                android:layout_width="70dp"
                android:layout_height="100dp"
                android:inputType="number"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/guion"
                android:textColorHint="@color/disabled2"
                android:textSize="50dp"
                android:maxLength="1"
                android:textAlignment="center"/>
        <EditText
                android:id="@+id/firma_box_4"
                android:layout_width="70dp"
                android:layout_height="100dp"
                android:inputType="number"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/guion"
                android:textColorHint="@color/disabled2"
                android:textSize="50dp"
                android:maxLength="1"
                android:textAlignment="center"/>
        <EditText
                android:id="@+id/firma_box_5"
                android:layout_width="70dp"
                android:layout_height="100dp"
                android:inputType="number"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/guion"
                android:textColorHint="@color/disabled2"
                android:textSize="50dp"
                android:maxLength="1"
                android:textAlignment="center"/>
    </LinearLayout>
    
    <Button
            android:id="@+id/btn_confirm_pin"
            android:layout_weight="1"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:enabled="false"
            android:layout_gravity="center|top"
            android:layout_marginBottom="200dp"
            android:text="Confirmar"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"
            android:backgroundTint="@color/disabled1"/>

</LinearLayout>